<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_result"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@drawable/coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/coffee_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/coffee_type"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        app:layout_constraintStart_toEndOf="@+id/img_result"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coffee_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/size"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_result"
        app:layout_constraintTop_toBottomOf="@+id/coffee_type" />

    <TextView
        android:id="@+id/coffee_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee_size"
        app:layout_constraintTop_toBottomOf="@+id/coffee_type" />


</androidx.constraintlayout.widget.ConstraintLayout>